Added demo.txt file“

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to Nginx</h1>
+    <h1>Welcome to Nginx Web Server</h1>
     <p>This is a simple index.html page served by Nginx.</p>
 </body>
 </html>
