--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>Welcome to Nginx Web Server</h1>
-    <p>This is a simple index.html page served by Nginx.</p>
+    <p>This is a simple index.html page served by Nginx Web Server.</p>
 </body>
 </html>
 
